# SMBX2-Episode-Updater

./: .gitignore  README.md  pyproject.toml
smbx2_episode_updater/: smbx2_episode_updater.py
src/: config_state.py  ctl.py  download.py  gui.py  logger.py  smbx2_episode_updater.py  zip_merge.py
